# kataharness

./: .gitattributes  .gitignore  .snyk  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  install.ps1  install.sh  kata.config  uninstall.ps1  uninstall.sh  update.ps1  update.sh
.claude-plugin/: plugin.json
tools/: benchmark.py  benchmark_control.py  benchmark_def.py  contract_edges.py  contract_gate.py  debug_report.py  deviation.py  drift_gate.py  escalation.py  footprint.py  fs_atomic.py  function_model.py  gate_emit.py  graph_gen.py  grounding_gate.py  iac_apply.py  iac_detect.py  intent_scaffold.py  kata_adaptive.py  kata_advisor.py  kata_banner.py  kata_board.py  kata_crew.py  kata_dash.py  kata_dash_demo.py  kata_dash_model.py  kata_dispatch.py  kata_gauge.py  kata_host_settings.py  kata_install.py  kata_models.py  kata_overlay.py  kata_preflight.py  kata_quota.py  kata_restore.py  kata_risk.py  kata_roles.py  kata_router.py  kata_scope.py  kata_settings.py  (+19 more)
tools/scripts/: gauntlet.py  sca.sh
tools/tests/: test_advisor_smoke.py  test_benchmark.py  test_benchmark_control.py  test_benchmark_def.py  test_claude_hooks.py  test_contract_edges.py  test_contract_gate.py  test_debug_report.py  test_deviation.py  test_drift_gate.py  test_escalation.py  test_exec_safety.py  test_footprint.py  test_fs_atomic.py  test_function_model.py  test_gate_emit.py  test_gauntlet_script.py  test_graph_gen.py  test_grounding_gate.py  test_iac_apply.py  test_iac_detect.py  test_install_cli_headless.py  test_install_commands.py  test_install_update.py  test_intent_scaffold.py  test_kata_adaptive.py  test_kata_advisor.py  test_kata_banner.py  test_kata_board.py  test_kata_crew.py  test_kata_dash_demo.py  test_kata_dash_model.py  test_kata_dash_render.py  test_kata_dispatch.py  test_kata_gauge.py  test_kata_gauge_check.py  test_kata_host_settings.py  test_kata_install.py  test_kata_install_vault_note.py  test_kata_models.py  (+38 more)
tools/tests/fixtures/bad-cost/plan/kata-badcost/: SKILL.md
tools/tests/fixtures/bad-link/plan/kata-badlink/: SKILL.md
tools/tests/fixtures/bad-name/plan/kata-wrongname/: SKILL.md
tools/tests/fixtures/bad-tier/plan/kata-foo-standard/: SKILL.md
tools/tests/fixtures/bad-tools/plan/kata-badtools/: SKILL.md
tools/tests/fixtures/debug_report/: RESULT.json  deferred.json  findings.json  mutation.json
tools/tests/fixtures/debug_report/drift/: A_pass.json  B_block.json
tools/tests/fixtures/debug_report/fix_manifest/: A.json
tools/tests/fixtures/debug_report/function_models/: mod_a_high.json  mod_b_low.json  mod_c_sparse.json
tools/tests/fixtures/debug_report/snyk/: A_clean.json  B_withfinding.json  C_unavailable.json  D_masking.json
tools/tests/fixtures/deviation/: false_positive.json  fm_example.json  true_positive.json
tools/tests/fixtures/drift_gate/: after_outcomes_fix.json  after_outcomes_regression.json  before_outcomes.json  parse_output_sample.txt  snap_after_divergent.txt  snap_after_nondeterministic.txt  snap_before.txt
tools/tests/fixtures/good-tier/plan/kata-foo-standard/: SKILL.md
tools/tests/fixtures/iac_apply/: cfn_describe_changeset.json  tf_plan_stateful_delete.json
tools/tests/fixtures/recall/: DECISIONS.md  INTENT.md  LESSONS-LEARNED.md  understand.md  validation-misses.jsonl
tools/tests/fixtures/validation_tripwire/: bad_grounding.json  bad_review.json  bad_slop.json  bad_slop_major.json
(+304 files in other folders)
